Changed to familiar
Removed most ui from java made in javascript css and html